<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2012 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  <string name="app_name">二维码 X</string>
  
  <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
  
  <string name="menu_history">历史</string>
  <string name="menu_new">生成</string>
  <string name="menu_about">关于</string>
  
  <string name="capture_menu_flash_on">开灯</string>
  <string name="capture_menu_flash_off">关灯</string>
  
  <string name="home_scan">扫描</string>
  <string name="home_history">历史</string>  
  <string name="home_new">生成</string>
  <string name="home_about">关于</string>
  
  <string name="history_clean">清空历史记录？</string>
  
  
  
  <string name="qrcode_title">扫描结果</string>
  <string name="qrcode_copy">复制</string>
  <string name="qrcode_share">分享</string>
  <string name="qrcode_browser">浏览器</string>
  
  <string name="history_empty">空空如也</string>
  
  <string name="new_save">保存</string>
  <string name="new_share">分享</string>
  
  <string name="about_version">软件版本</string>
  <string name="about_website">官方网站</string>
  <string name="about_update">亲，您的版本out了哦\n赶紧更新吧！</string>
  
  <string name="scan_opening">正在启动摄像头...</string>
  
  
  <string name="app_picker_name">应用</string>
  <string name="bookmark_picker_name">书签</string>
  <string name="button_add_calendar">添加事件至日历</string>
  <string name="button_add_contact">添加联系人</string>
  <string name="button_back">返回</string>
  <string name="button_book_search">打开图书搜索</string>
  <string name="button_cancel">取消</string>
  <string name="button_custom_product_search">自定义搜索</string>
  <string name="button_dial">拨号</string>
  <string name="button_done">完成</string>
  <string name="button_email">发送email</string>
  <string name="button_get_directions">获取地址</string>
  <string name="button_google_shopper">谷歌购物</string>
  <string name="button_mms">发送彩信</string>
  <string name="button_ok">确定</string>
  <string name="button_open_browser">打开浏览器</string>
  <string name="button_product_search">打开产品搜索</string>
  <string name="button_search_book_contents">搜索图书内容</string>
  <string name="button_share_app">共享应用</string>
  <string name="button_share_bookmark">分享书签</string>
  <string name="button_share_by_email">通过email分享</string>
  <string name="button_share_by_sms">通过短信分享</string>
  <string name="button_share_clipboard">分享剪切板</string>
  <string name="button_share_contact">分享联系人</string>
  <string name="button_show_map">显示地图</string>
  <string name="button_sms">发送短信</string>
  <string name="button_web_search">网页搜索</string>
  <string name="button_wifi">连接到网络</string>
  <string name="contents_contact">联系人信息</string>
  <string name="contents_email">Email地址</string>
  <string name="contents_location">地理坐标</string>
  <string name="contents_phone">电话号码</string>
  <string name="contents_sms">短信地址</string>
  <string name="contents_text">纯文本</string>
  <string name="history_clear_one_history_text">删除</string>
  <string name="history_clear_text">删除历史</string>
  <string name="history_email_title">条码扫描器历史</string>
  <string name="history_empty_detail">没有条码扫描已记录</string>
  <string name="history_send">发送历史</string>
  <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
  <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
  <string name="msg_default_format">格式</string>
  <string name="msg_default_meta">元数据</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
  <string name="msg_default_time">时间</string>
  <string name="msg_default_type">类型</string>
  <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
  <string name="msg_google_books">谷歌图书</string>
  <string name="msg_google_product">谷歌购物</string>
  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
  <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
  <string name="msg_redirect">重定向</string>
  <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
  <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
  <string name="msg_sbc_no_page_returned">无页面返回</string>
  <string name="msg_sbc_page">页面</string>
  <string name="msg_sbc_results">结果</string>
  <string name="msg_sbc_searching_book">搜索图书…</string>
  <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
  <string name="msg_sbc_unknown_page">未知页面</string>
  <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
  <string name="msg_share_text">或键入一些文字</string>
  <string name="msg_sure">你肯定吗？</string>
  <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
  <string name="result_address_book">找到联系人信息</string>
  <string name="result_calendar">找到日历事件</string>
  <string name="result_email_address">找到email地址</string>
  <string name="result_geo">找到地理坐标</string>
  <string name="result_isbn">找到图书</string>
  <string name="result_product">找到产品</string>
  <string name="result_sms">找到短信地址</string>
  <string name="result_tel">找到电话号码</string>
  <string name="result_text">找到纯文本</string>
  <string name="result_uri">找到URL</string>
  <string name="result_wifi">发现网络配置</string>
  <string name="sbc_name">Google图书搜索</string>
  <string name="share_name">通过条码分享</string>
  <string name="wifi_changing_network">请求连接到网络\u2026</string>
  <string name="wifi_ssid_label">网络SSID</string>
  <string name="wifi_type_label">类型</string>
</resources>
