<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:padding="5dip"
    >
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal" 
	    android:background="#333333"
	    android:padding="5dip"
	    >
	    
		<LinearLayout 
		    android:id="@+id/capture_menu_1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    >
		    <FrameLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:background="@drawable/base_btn_bg"
		        android:clickable="true"
		        >
		        <cn.xxd.qr.view.CaptureMenuTextView 
		            style="@style/CaptureMenuItem"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/menu_about"
			        android:drawableTop="@drawable/a_content_save"
			        />
		    </FrameLayout>
		    <FrameLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:background="@drawable/base_btn_bg"
		        android:clickable="true"
		        >
		        <cn.xxd.qr.view.CaptureMenuTextView 
		            style="@style/CaptureMenuItem"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/menu_history"
			        android:drawableTop="@drawable/a_content_save"
			        />
		    </FrameLayout>
		    <FrameLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:background="@drawable/base_btn_bg"
		        android:clickable="true"
		        >
		        <cn.xxd.qr.view.CaptureMenuTextView 
		            style="@style/CaptureMenuItem"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/menu_new"
			        android:drawableTop="@drawable/a_content_save"
			        />
		    </FrameLayout>
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/capture_menu_2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:layout_marginLeft="15dip"
		    >
		    <View
		        android:layout_width="1dip"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        />
		    <FrameLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        android:background="@drawable/base_btn_bg"
		        android:clickable="true"
		        >
		        <cn.xxd.qr.view.CaptureMenuTextView 
		            style="@style/CaptureMenuItem"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/capture_menu_flash_on"
			        android:drawableTop="@drawable/a_content_save"
			        />
		    </FrameLayout>
		    <View
		        android:layout_width="1dip"
		        android:layout_height="0dip"
		        android:layout_weight="1"
		        />
		</LinearLayout>
	    
	</LinearLayout>
</FrameLayout>