<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
    
    <RelativeLayout style="@style/Header"
        android:background="@null"
        >
        <ImageButton 
            style="@style/HeaderBtn"
            android:id="@+id/qrcode_back"
            android:src="@drawable/a_navigation_back_dark"
            />
	</RelativeLayout>
   
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        >
	        <FrameLayout 
	            android:id="@+id/ad"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            ></FrameLayout>

	        <ImageView 
		        android:id="@+id/qrcode_img"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginTop="5dip"
		        />
	        <TextView 
		        android:id="@+id/qrcode_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android:textSize="@dimen/base_text_small"
		        android:gravity="top|center_horizontal"
		        android:layout_marginTop="5dip"
		        />
	    </LinearLayout>
	</ScrollView>
    
	<View style="@style/LineGray"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button 
	        style="@style/BottomBtn"
	        android:id="@+id/qrcode_copy"
	        android:drawableTop="@drawable/a_content_copy_dark"
	        android:text="@string/qrcode_copy"
	        />
	    <Button 
	        style="@style/BottomBtn"
	        android:id="@+id/qrcode_share"
	        android:drawableTop="@drawable/a_social_share_dark"
	        android:text="@string/qrcode_share"
	        />
	    <Button 
	        style="@style/BottomBtn"
	        android:id="@+id/qrcode_website"
	        android:drawableTop="@drawable/a_location_web_site_dark"
	        android:text="@string/qrcode_browser"
	        android:visibility="gone"
	        />
	</LinearLayout>
</LinearLayout>