<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        
       <LinearLayout 
        android:id="@+id/capture_tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:background="#000000"
        
        >
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <cn.xxd.qr.view.CaptureTabButton 
            style="@style/QTabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/home_about"
		    android:textColor="@color/base_white"
		    android:drawableTop="@drawable/base_checkbox"
		    android:clickable="false"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <cn.xxd.qr.view.CaptureTabButton 
            style="@style/QTabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/home_new"
            android:drawableTop="@drawable/base_checkbox"
		    android:textColor="@color/base_white"
		    android:clickable="false"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <cn.xxd.qr.view.CaptureTabButton 
            style="@style/QTabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/home_history"
            android:drawableTop="@drawable/base_checkbox"
		    android:textColor="@color/base_white"
		    android:clickable="false"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <cn.xxd.qr.view.CaptureTabButton 
            style="@style/QTabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/home_scan"
            android:drawableTop="@drawable/base_checkbox"
		    android:textColor="@color/base_blue_light"
		    android:clickable="false"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="right"
        >
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            />
        <View 
            android:layout_width="1dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#33B5E5"
            />
   </LinearLayout>
    
</FrameLayout>